// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskContainerComponent DOM should render tasks$ 1`] = `
<div
  id="root3"
  ng-version="7.2.11"
>
  <mat-card
    class="mat-card"
  >
    
    <app-task-presenter
      ng-reflect-task="[object Object],[object Object"
    >
      <p>
        [
  {
    "id": 1,
    "name": "test1",
    "buttonText": "pause",
    "timer": {
      "_isScalar": true,
      "value": 1
    }
  },
  {
    "id": 2,
    "name": "test2",
    "buttonText": "pause",
    "timer": {
      "_isScalar": true,
      "value": 1
    }
  },
  {
    "id": 3,
    "name": "test3",
    "buttonText": "pause",
    "timer": {
      "_isScalar": true,
      "value": 1
    }
  }
]
      </p>
    </app-task-presenter>
  </mat-card>
  <mat-card
    class="mat-card"
  >
    <mat-card-title
      class="mat-card-title"
    >
       Total: 00:01 
    </mat-card-title>
  </mat-card>
</div>
`;

exports[`TaskContainerComponent DOM should render totalTime$ 1`] = `
<div
  id="root2"
  ng-version="7.2.11"
>
  <mat-card
    class="mat-card"
  >
    
  </mat-card>
  <mat-card
    class="mat-card"
  >
    <mat-card-title
      class="mat-card-title"
    >
       Total: 00:35 
    </mat-card-title>
  </mat-card>
</div>
`;
